--- a/devybigboard-client/src/index.html
+++ b/devybigboard-client/src/index.html
@@ -3,9 +3,26 @@
 
 <head>
     <meta charset="UTF-8">
-    <link href='https://fonts.googleapis.com/css?family=Englebert' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Englebert" rel="stylesheet" type="text/css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Devy Big Board</title>
+
+    <title>Devy Board</title>
+    <meta name="description"
+        content="Create and rank your 2025 Devy and Rookie Draft Board. Perfect for startup drafts, devy mocks, and dynasty planning." />
+    <meta name="keywords"
+        content="devy mock draft, devy rankings, dynasty rookie board, 2025 devy, 2026 devy, 2027 devy, superflex draft board, fantasy football, devy draft tool" />
+    <meta name="author" content="Braden Borman" />
+
+
+    <!-- Twitter Card -->
+    <!-- <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="DevyBoard - Devy & Rookie Rankings Tool" />
+    <meta name="twitter:description"
+        content="Draft your Devy and Rookie picks with confidence. Rankings and mocks for dynasty leagues." />
+    <meta name="twitter:image" content="https://www.devyboard.com/og-preview.png" /> Replace with your image -->
+
+    <!-- Favicon (optional) -->
+    <!-- <link rel="icon" type="image/png" href="/favicon.png" /> -->
 </head>
 
 <body>
