--- a/devybigboard-client/src/index.html
+++ b/devybigboard-client/src/index.html
@@ -8,7 +8,7 @@
 
     <title>Devy Board</title>
     <meta name="description"
-        content="Create and rank your 2025 Devy and Rookie Draft Board. Perfect for startup drafts, devy mocks, and dynasty planning." />
+        content="Create and rank your Devy and Rookie Draft Board. Perfect for startup drafts, devy mocks, and dynasty planning." />
     <meta name="keywords"
         content="devy mock draft, devy rankings, dynasty rookie board, 2025 devy, 2026 devy, 2027 devy, superflex draft board, fantasy football, devy draft tool" />
     <meta name="author" content="Braden Borman" />
