--- a/devybigboard-client/src/index.html
+++ b/devybigboard-client/src/index.html
@@ -12,6 +12,22 @@
     <meta name="keywords"
         content="devy mock draft, devy rankings, dynasty rookie board, 2025 devy, 2026 devy, 2027 devy, superflex draft board, fantasy football, devy draft tool" />
     <meta name="author" content="Braden Borman" />
+
+    <meta name="google-analytics" content="G-03DV8L1WEX" />
+
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+
+        gtag('consent', 'default', {
+            ad_storage: 'denied',
+            analytics_storage: 'denied'
+        });
+    </script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-03DV8L1WEX"></script>
+    <script>
+        gtag('js', new Date());
+    </script>
 </head>
 
 <body>
